unpackaged/main/default/objects/AcctSeed__Billing__c/fields/CCE__c.field-meta.xml
<CustomField>
    <fullName>CCE__c</fullName>
    <formula>TEXT(AcctSeed__Recurring_Billing__r.CCE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE</label>
    <type>Text</type>
</CustomField>