unpackaged/main/default/objects/AcctSeed__Billing__c/fields/CCE_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>CCE_Application_Number__c</fullName>
    <formula>AcctSeed__Recurring_Billing__r.CCE_Application_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE Application Number</label>
    <type>Text</type>
</CustomField>