unpackaged/main/default/objects/AcctSeed__Billing__c/fields/CCE_Application_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>CCE_Application_Number_Text__c</fullName>
    <label>zzCCE Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>