unpackaged/main/default/objects/AcctSeed__Billing__c/fields/CCE_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>CCE_Portfolio__c</fullName>
    <formula>Text( AcctSeed__Recurring_Billing__r.CCE_Portfolio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE Portfolio</label>
    <type>Text</type>
</CustomField>