unpackaged/main/default/objects/AcctSeed__Billing__c/fields/CCEText__c.field-meta.xml
<CustomField>
    <fullName>CCEText__c</fullName>
    <label>zzCCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>