unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Conga_Aging_Receivables__c.field-meta.xml
<CustomField>
    <fullName>Conga_Aging_Receivables__c</fullName>
    <description>##Conga updated btn:00b40000001Cpr8</description>
    <formula>"&amp;id=" + Id +
"&amp;templategroup=Billing" + 
"&amp;defaultpdf=1" + 
"&amp;reportid=00O40000004HWYE" +
"&amp;templateid=a014000000XWVrb" + 
"&amp;qmode=Download"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Aging Receivables</label>
    <type>Text</type>
</CustomField>