unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Conga_Invoices_Combined__c.field-meta.xml
<CustomField>
    <fullName>Conga_Invoices_Combined__c</fullName>
    <formula>"&amp;id=" + Id +
"&amp;templategroup=Billing" + 
"&amp;defaultpdf=1" + 
"&amp;queryid=[Billing]a3240000000HT78,[Account]a3240000000HT92,[Shipment]a3240000000UFkZ" + 
"&amp;queryid=[Billing2]a3240000002Dm4I" +
"&amp;templateid=a014000000ZfBPp" + 
"&amp;qmode=Download"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Invoices Combined</label>
    <type>Text</type>
</CustomField>