unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Credit_Memo_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Balance__c</fullName>
    <formula>IF(AcctSeed__Total__c &lt; 0, AcctSeed__Balance__c,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Memo Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>