unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Customer_Alias__c.field-meta.xml
<CustomField>
    <fullName>Customer_Alias__c</fullName>
    <formula>AcctSeed__Customer__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Alias</label>
    <type>Text</type>
</CustomField>