unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Funded_Balance__c.field-meta.xml
<CustomField>
    <fullName>Funded_Balance__c</fullName>
    <formula>if(Funded_Total__c=0,Funded_Amount__c,Funded_Total__c) - Funded_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>