unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Funded_Payments__c.field-meta.xml
<CustomField>
    <fullName>Funded_Payments__c</fullName>
    <label>Funded Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>