unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Lease_Invoice_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Invoice_Customer_Name__c</fullName>
    <label>Lease Invoice Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>