unpackaged/main/default/objects/AcctSeed__Billing__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <description>ID of the Orders table from Cat-5</description>
    <externalId>true</externalId>
    <label>LegacyID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>