unpackaged/main/default/objects/AcctSeed__Billing__c/fields/LegacyOrderType__c.field-meta.xml
<CustomField>
    <fullName>LegacyOrderType__c</fullName>
    <description>order_type from Cat-5 Order table</description>
    <label>LegacyOrderType</label>
    <length>3</length>
    <type>Text</type>
</CustomField>