unpackaged/main/default/objects/AcctSeed__Billing__c/fields/LegacyOrderTypeID__c.field-meta.xml
<CustomField>
    <fullName>LegacyOrderTypeID__c</fullName>
    <description>order_type_id from the Order table in Cat-5</description>
    <label>LegacyOrderTypeID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>