unpackaged/main/default/objects/AcctSeed__Billing__c/fields/MasterBillingInvoices__c.field-meta.xml
<CustomField>
    <fullName>MasterBillingInvoices__c</fullName>
    <description>##Conga created btn:00b400000011n6q</description>
    <formula>"&amp;id=" + Id +
"&amp;templategroup=Billing" + 
"&amp;defaultpdf=1" + 
"&amp;queryid=[Billing]a3240000000HT78,[Account]a3240000000HT92,[Shipment]a3240000000UFkZ" + 
"&amp;templateid=a014000000WNh2m" + 
"&amp;qmode=Download"</formula>
    <label>MasterBillingInvoices</label>
    <type>Text</type>
</CustomField>