unpackaged/main/default/objects/AcctSeed__Billing__c/fields/NotePad__c.field-meta.xml
<CustomField>
    <fullName>NotePad__c</fullName>
    <description>NotePad field from Cat-5 Orders table</description>
    <label>NotePad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>