unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <formula>AcctSeed__Customer__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>