unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Partial_Recurring_Bill__c.field-meta.xml
<CustomField>
    <fullName>Partial_Recurring_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check true if this Billing is a partial month Recurring Billing.</inlineHelpText>
    <label>Manually Adjust Billing Period</label>
    <type>Checkbox</type>
</CustomField>