unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Partial_Recurring_Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Partial_Recurring_Billing_Start_Date__c</fullName>
    <label>Partial Recurring Billing Start Date</label>
    <type>Date</type>
</CustomField>