unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Printed_Date__c.field-meta.xml
<CustomField>
    <fullName>Printed_Date__c</fullName>
    <description>Printed_Date from Cat-5 orders table</description>
    <label>Printed Date</label>
    <type>Date</type>
</CustomField>