unpackaged/main/default/objects/AcctSeed__Billing__c/fields/shipment_tracking_numbers__c.field-meta.xml
<CustomField>
    <fullName>shipment_tracking_numbers__c</fullName>
    <description>shipment_tracking_numbers field from Cat-5 Orders table</description>
    <label>shipment_tracking_numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>