unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <formula>Text(AcctSeedERP__Sales_Order__r.Preferred_Carrier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Carrier</label>
    <type>Text</type>
</CustomField>