unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Shipping_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_State_Zip__c</fullName>
    <formula>AcctSeed__Shipping_City__c +', '+ AcctSeed__Shipping_State__c + ' ' + AcctSeed__Shipping_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City State Zip</label>
    <type>Text</type>
</CustomField>