unpackaged/main/default/objects/AcctSeed__Billing__c/fields/st_cap_amount_1__c.field-meta.xml
<CustomField>
    <fullName>st_cap_amount_1__c</fullName>
    <description>st_cap_amount_1 field from Cat-5 Orders table</description>
    <label>st_cap_amount_1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>