unpackaged/main/default/objects/AcctSeed__Billing__c/fields/st_gl_account_id1__c.field-meta.xml
<CustomField>
    <fullName>st_gl_account_id1__c</fullName>
    <description>st_gl_account_id1 field from Cat-5 Orders table</description>
    <label>st_gl_account_id1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>