unpackaged/main/default/objects/AcctSeed__Billing__c/fields/st_name_2__c.field-meta.xml
<CustomField>
    <fullName>st_name_2__c</fullName>
    <description>st_name_2 from Cat-5 Orders table</description>
    <label>st_name_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>