unpackaged/main/default/objects/AcctSeed__Billing__c/fields/st_percent_1__c.field-meta.xml
<CustomField>
    <fullName>st_percent_1__c</fullName>
    <description>st_percent_1 from Cat-5 Orders table</description>
    <label>st_percent_1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>