unpackaged/main/default/objects/AcctSeed__Billing__c/fields/st_percent_2__c.field-meta.xml
<CustomField>
    <fullName>st_percent_2__c</fullName>
    <description>st_percent_2 field from Cat-5 Orders table</description>
    <label>st_percent_2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>