unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Sum_DCE__c.field-meta.xml
<CustomField>
    <fullName>Sum_DCE__c</fullName>
    <label>Sum Data Center Services</label>
    <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Line__c.Product_Billing_Category__c</field>
        <operation>equals</operation>
        <value>Data Center Services</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>