unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Sum_FNB_Voice__c.field-meta.xml
<CustomField>
    <fullName>Sum_FNB_Voice__c</fullName>
    <formula>Summary_CPE__c  +  Sum_DCE__c  +  Sum_Miscellaneous__c  +  Sum_Support_Only__c  +  Sum_TSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum-FNB Voice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>