unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Summary_Billing__c.field-meta.xml
<CustomField>
    <fullName>Summary_Billing__c</fullName>
    <formula>AcctSeed__Customer__r.ParentId!=NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Billing</label>
    <type>Checkbox</type>
</CustomField>