unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Line__c.Tax_Type__c</field>
        <operation>equals</operation>
        <value>Tax Rate</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>