unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Taxes_Surcharges_Fees__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Surcharges_Fees__c</fullName>
    <description>Roll-Up summary of all non-sales taxes, surcharges and fees.</description>
    <label>Taxes, Surcharges &amp; Fees</label>
    <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Line__c.AcctSeed__Revenue_GL_Account__c</field>
        <operation>equals</operation>
        <value>14023 - SALES-MS-SURCHARGES &amp; FEES</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>