unpackaged/main/default/objects/AcctSeed__Billing__c/fields/testcongaemail__c.field-meta.xml
<CustomField>
    <fullName>testcongaemail__c</fullName>
    <formula>HYPERLINK("https://composer.congamerge.com/composer8/index.html?SessionId="
+ $Api.Session_ID + "&amp;ServerURL=" + $Api.Partner_Server_URL_290 +
  Payment_Reminder_Conductor__c, "Send Payment Reminder Email")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Payment Reminder</label>
    <type>Text</type>
</CustomField>