unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Total_Balance_Funded_Unfunded__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Funded_Unfunded__c</fullName>
    <formula>AcctSeed__Balance__c + Funded_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance (Funded &amp; Unfunded)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>