unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Total_Bill_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Text__c</fullName>
    <formula>text((AcctSeed__Total__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bill Text</label>
    <type>Text</type>
</CustomField>