unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <formula>shipment_tracking_numbers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Number</label>
    <type>Text</type>
</CustomField>