unpackaged/main/default/objects/AcctSeed__Billing__c/validationRules/AcctSeed__Accounting_Period_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Accounting_Period_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AcctSeed__Accounting_Period__c)</errorConditionFormula>
    <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>