unpackaged/main/default/objects/AcctSeed__Billing__c/listViews/AcctSeed__All1.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Due_Date2__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>