unpackaged/main/default/objects/AcctSeed__Billing__c/listViews/AcctSeed__Credit_Memo.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Credit_Memo</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Due_Date2__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <columns>AcctSeed__Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Credit Memo</value>
    </filters>
    <label>Credit Memos</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>