unpackaged/main/default/objects/AcctSeed__Billing__c/listViews/AcctSeed__PDF_Email_Sent.listView-meta.xml
<ListView>
    <fullName>AcctSeed__PDF_Email_Sent</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Due_Date2__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <columns>AcctSeed__Age__c</columns>
    <columns>AcctSeed__Ledger__c</columns>
    <columns>AcctSeed__PDF_Email_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__PDF_Email_Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <label>PDF Email Sent</label>
</ListView>