unpackaged/main/default/objects/AcctSeed__Billing__c/listViews/All_Billings_This_Month.listView-meta.xml
<ListView>
    <fullName>All_Billings_This_Month</fullName>
    <columns>AcctSeed__Total__c</columns>
    <columns>Tax_Amount__c</columns>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>Customer_Alias__c</columns>
    <columns>Parent_Account_ID__c</columns>
    <columns>AcctSeed__Billing_City__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Due_Date2__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Age__c</columns>
    <columns>AcctSeed__Billing_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <filters>
        <field>AcctSeed__Date__c</field>
        <operation>greaterOrEqual</operation>
    </filters>
    <filters>
        <field>AcctSeed__Date__c</field>
        <operation>greaterOrEqual</operation>
    </filters>
    <filters>
        <field>AcctSeed__Date__c</field>
        <operation>greaterOrEqual</operation>
    </filters>
    <filters>
        <field>AcctSeed__Date__c</field>
        <operation>greaterOrEqual</operation>
    </filters>
    <label>All Billings - This Month</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>