unpackaged/main/default/objects/AcctSeed__Billing__c/listViews/All_Posted.listView-meta.xml
<ListView>
    <fullName>All_Posted</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>Billing_City_State_Zip__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <label>All Posted</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>