unpackaged/main/default/objects/AcctSeed__Billing__c/listViews/All_Posted_and_Unpaid.listView-meta.xml
<ListView>
    <fullName>All_Posted_and_Unpaid</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Customer__c</columns>
    <columns>Billing_City_State_Zip__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <filters>
        <field>AcctSeed__Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Posted and Unpaid</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>